primera versión del openapi y código.
