# app/src/main/kotlin/ar/edu/austral/inf/sd/server/api/RelayApiService.kt
@@ -11,8 +11,11 @@ interface RelayApiService {
      *
      * @param message  (required)
      * @param signatures  (required)
-     * @return mensaje recibido y reenviado. (status code 202)
+     * @param xGameTimestamp  (optional)
+     * @return mensaje recibido y reenviado. (status code 200)
+     *         or Tu reloj atrasa... (status code 400)
+     *         or Los bits se perdieron en el multiverso (status code 503)
      * @see RelayApi#relayMessage
      */
-    fun relayMessage(message: kotlin.String, signatures: Signatures): Signature
+    fun relayMessage(message: kotlin.String, signatures: Signatures, xGameTimestamp: kotlin.Int?): Signature
 }
