# app/src/main/kotlin/ar/edu/austral/inf/sd/server/api/UnregisterNodeApiService.kt
@@ -1,0 +1,16 @@
+package ar.edu.austral.inf.sd.server.api
+
+
+interface UnregisterNodeApiService {
+
+    /**
+     * POST /unregister-node
+     * Un participante decide dejar el juego
+     *
+     * @param uuid  (optional)
+     * @param salt  (optional)
+     * @return Sashay Away (status code 200)
+     * @see UnregisterNodeApi#unregisterNode
+     */
+    fun unregisterNode(uuid: java.util.UUID?, salt: kotlin.String?): kotlin.String
+}
