# app/src/main/kotlin/ar/edu/austral/inf/sd/server/model/RegisterResponse.kt
@@ -16,8 +16,7 @@ import jakarta.validation.Valid
  * 
  * @param nextHost 
  * @param nextPort 
- * @param uuid 
- * @param hash 
+ * @param timeout 
  */
 data class RegisterResponse(
 
@@ -25,9 +24,8 @@ data class RegisterResponse(
 
     @get:JsonProperty("nextPort", required = true) val nextPort: kotlin.Int,
 
-    @get:JsonProperty("uuid", required = true) val uuid: kotlin.String,
-
-    @get:JsonProperty("hash", required = true) val hash: kotlin.String
+    @get:Min(0)
+    @get:JsonProperty("timeout", required = true) val timeout: kotlin.Int
     ) {
 
 }
